<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/Language"
        app:title="@string/Language">
        <ListPreference
            android:defaultValue="in"
            android:entries="@array/pref_language_list_titles"
            android:entryValues="@array/pref_language_list_values"
            android:key="language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/change_language_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Reminder"
        app:title="@string/Reminder">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/key_reminder"
            android:title="@string/daily_reminder" />

    </PreferenceCategory>

</PreferenceScreen>